--- a/.devcontainer/quickstart/devcontainer.json
+++ b/.devcontainer/quickstart/devcontainer.json
@@ -2,16 +2,8 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-in-docker
 {
 	"name": "quickstart",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/javascript-node:18",
+	"image": "mcr.microsoft.com/devcontainers/universal:2.12-focal",
 	"postCreateCommand": "sudo cp .devcontainer/quickstart/welcome.txt /usr/local/etc/vscode-dev-containers/first-run-notice.txt",
-	"features": {
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {
-			"version": "latest",
-			"enableNonRootDocker": "true",
-			"moby": "true"
-		}
-	},
 	"portsAttributes": {
 		"2113": {
 			"label": "EventStoreDB Admin UI",
